# empty_space_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: EmptySpaceEstimation.action  GeminiDetection.action
api/: estimation_flask_api.py
empty_space_estimation/: space_estimation_client.py
env_docker/: .env  Dockerfile  docker-compose.yml  requirements.txt
io/: config.yaml  nanosam.yaml  processing_time.yaml  prompt_gemini.yaml
launch/: space_estimation.launch
msg/: EmptySpace.msg
script/: gemini_detection_server.py  seg.py  seg2place.py  seg_node.py  seg_test.py  space_estimation_client.py  space_estimation_server.py  space_estimation_server_bkup.py  spots_murker.py
script/test/: call_client_test.py  place_test.py  save_rgb.py  seg2place.py
srv/: EmptySpaceService.srv
